# FamilyLedger

./: .gitignore  GOOGLE_SETUP.md  LICENSE  README.md  database.js  index.html  main.js  package-lock.json  package.json  tsconfig.json  tsconfig.main.json  tsconfig.renderer.json  vite.config.ts  webpack.renderer.config.js
.github/workflows/: build.yml  manual-release.yml  release.yml
Google Drive/FamilyLedger/FamilyLedger/: categories.json  transactions.json
src/: main.ts  style.css  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/database/: index.ts  json-adapter.ts  migrations.ts  operations.ts  schema.sql
src/main/: database.ts  main.ts  preload.ts
src/renderer/: App.css  App.tsx  index.html  index.tsx
