[package]
name = "family-ledger"
version = "0.1.0"
description = "A family finance management desktop app"
authors = ["you"]
license = ""
repository = ""
default-run = "family-ledger"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7", features = [ "shell-open"] }

[features]
custom-protocol = [ "tauri/custom-protocol" ]
